// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFilterEditor rendering renders expected elements 1`] = `
<ListInput
  column={true}
  error={null}
  getHighlightKey={[Function]}
  getItemKey={[Function]}
  getItemName={[Function]}
  getSuggestionText={[Function]}
  id="textFilterEditorInput"
  label="label"
  list={
    Array [
      "a",
    ]
  }
  onErrorChange={[MockFunction]}
  onListChange={[Function]}
  onTextChange={[MockFunction]}
  placeholder="placeholder"
  renderSuggestion={[MockFunction]}
  type="text"
  value=""
/>
`;

exports[`TextFilterEditor rendering renders expected elements when list input requests suggestions text 1`] = `
<ListInput
  column={true}
  error={null}
  getHighlightKey={[Function]}
  getItemKey={[Function]}
  getItemName={[Function]}
  getSuggestionText={[Function]}
  id="textFilterEditorInput"
  label="label"
  list={
    Array [
      "a",
    ]
  }
  onErrorChange={[MockFunction]}
  onListChange={[Function]}
  onTextChange={[MockFunction]}
  placeholder="placeholder"
  renderSuggestion={[MockFunction]}
  type="text"
  value=""
/>
`;

exports[`TextFilterEditor rendering renders expected elements when list is null 1`] = `
<ListInput
  column={true}
  error={null}
  getHighlightKey={[Function]}
  getItemKey={[Function]}
  getItemName={[Function]}
  getSuggestionText={[Function]}
  id="textFilterEditorInput"
  label="label"
  list={Array []}
  onErrorChange={[MockFunction]}
  onListChange={[Function]}
  onTextChange={[MockFunction]}
  placeholder="placeholder"
  renderSuggestion={[MockFunction]}
  type="text"
  value=""
/>
`;
